# PUCCH_F2

./: .gitignore  CMakeLists.txt  README.md  compile.sh  run.sh
include/: block_decoder.hpp  matrix.hpp  orchestrator.hpp
simulation_results/: results20x1.csv  results20x10.csv  results20x11.csv  results20x12.csv  results20x2.csv  results20x3.csv  results20x4.csv  results20x5.csv  results20x6.csv  results20x7.csv  results20x8.csv  results20x9.csv
src/: block_decoder.cpp  main.cpp  orchestrator.cpp
visualization/: visual.py
